8245714: "Bad graph detected in build_loop_late" when loads are pinned on loop limit check uncommon branch

Reviewed-by: thartmann